# veil

./: .env.example  .gitignore  DEMO.md  README.md
.github/workflows/: groth16-proof.yml
contracts/veil/: Cargo.toml
contracts/veil/src/: lib.rs  test.rs
contracts/veil/test_snapshots/test/: commit_after_deadline_is_rejected.1.json  commit_at_or_after_deadline_is_rejected.1.json  commit_with_valid_proof_is_stored.1.json  double_commit_is_rejected.1.json  double_reveal_is_rejected.1.json  get_config_returns_stored_config.1.json  init_twice_is_rejected.1.json  leaderboard_empty_when_no_reveals.1.json  leaderboard_ranks_best_first.1.json  reveal_before_outcome_set_is_rejected.1.json  reveal_score_is_absolute_distance_when_under.1.json  reveal_scores_and_records_entry.1.json  reveal_with_wrong_salt_is_rejected.1.json  reveal_with_wrong_y_is_rejected.1.json  reveal_without_commitment_is_rejected.1.json  set_deadline_extends_a_passed_round.1.json  set_deadline_updates_config.1.json  set_image_id_updates_config.1.json  set_outcome_then_get_outcome.1.json  set_outcome_twice_is_rejected.1.json  two_predictors_both_listed.1.json
contracts/verifier/: UPSTREAM.md  deployment.toml
docs-needed/: CLAUDE.md  PRD.md  README.verix.md  REQUIREMENTS_SPRINTS.md  ROADMAP.md  instructions.md  memory.md
web/: .gitignore  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Footer.tsx  Nav.tsx  format.ts  ui.tsx  useWallet.ts
web/lib/: config.ts  proving.ts  veil.ts  wallet.ts
zk/host/: Cargo.toml
zk/host/src/: main.rs
(+13 files in other folders)
