[package]
name = "veil"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = "25.1.0"
# The RISC Zero verifier router client — calls the on-chain verifier we deployed
# in Sprint 1. Path-deps the vendored Nethermind fork.
risc0-interface = { path = "../verifier/contracts/interface", package = "risc0-interface" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
