[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
risc0-ethereum-contracts = "^3.0"   # encode_seal() — produces the seal the Stellar verifier expects
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
sha2 = "0.10"                        # journal_digest = sha256(journal)
hex = "0.4"                          # hex-encode seal / image_id / journal_digest for the CLI
